[gd_scene load_steps=3 format=3 uid="uid://b8jvp56m3ssuw"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_u554g"]
[ext_resource type="Script" path="res://scripts/debug/debug_ui.gd" id="2_07d4o"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_u554g")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="debug_ui" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
script = ExtResource("2_07d4o")

[node name="Panel" type="PanelContainer" parent="CanvasLayer/debug_ui"]
layout_direction = 3
layout_mode = 0
offset_right = 40.0
offset_bottom = 139.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/debug_ui/Panel"]
layout_mode = 2

[node name="current_state" type="Label" parent="CanvasLayer/debug_ui/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/debug_ui/Panel/VBoxContainer"]
layout_mode = 2

[node name="velocity" type="Label" parent="CanvasLayer/debug_ui/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="movement_velocity" type="Label" parent="CanvasLayer/debug_ui/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="other_velocity" type="Label" parent="CanvasLayer/debug_ui/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="whole_velocity" type="Label" parent="CanvasLayer/debug_ui/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
